# getarround

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: get_around_delay_analysis.csv
deploy/: DEPLOYMENT.md
deploy/hf-api/: .dockerignore  Dockerfile  README.md
deploy/hf-dashboard/: .dockerignore  Dockerfile  README.md
docs/: ARCHITECTURE.md
notebooks/: 00_assignment.ipynb
src/api/: main.py
src/api/routers/: predict.py
src/api/schemas/: prediction.py
src/config/: settings.py
src/dashboard/: app.py
src/ml/: predict.py  preprocessing.py  train.py
tests/: conftest.py  factories.py
tests/integration/: test_api_integration.py
tests/unit/: test_api.py  test_ml.py
